package storage

var schemaStatements = []string{
	`CREATE TABLE IF NOT EXISTS repos (id TEXT PRIMARY KEY, root_path TEXT NOT NULL, repo_hash TEXT NOT NULL UNIQUE, current_branch TEXT, current_commit TEXT, created_at TEXT NOT NULL, updated_at TEXT NOT NULL)`,
	`CREATE TABLE IF NOT EXISTS runs (id TEXT PRIMARY KEY, repo_id TEXT NOT NULL REFERENCES repos(id), objective TEXT NOT NULL, status TEXT NOT NULL CHECK(status IN ('created','scoped','planned','executing','verifying','reporting','completed','blocked','failed','cancelled')), current_phase TEXT, base_commit TEXT, head_commit TEXT, trace_id TEXT, created_by TEXT, created_at TEXT NOT NULL, updated_at TEXT NOT NULL, completed_at TEXT)`,
	`CREATE TABLE IF NOT EXISTS work_items (id TEXT PRIMARY KEY, run_id TEXT NOT NULL REFERENCES runs(id), parent_work_id TEXT REFERENCES work_items(id), role TEXT NOT NULL CHECK(role IN ('leader','reader','planner','executor','verifier','critic','summarizer')), status TEXT NOT NULL CHECK(status IN ('draft','ready','claimed','running','completed','verified','blocked','failed','cancelled','expired')), title TEXT NOT NULL, goal TEXT NOT NULL, context_packet_id TEXT REFERENCES context_packets(id), permission_policy_id TEXT REFERENCES permission_policies(id), priority INTEGER DEFAULT 0, retry_count INTEGER DEFAULT 0, base_commit TEXT, created_at TEXT NOT NULL, updated_at TEXT NOT NULL, completed_at TEXT)`,
	`CREATE TABLE IF NOT EXISTS work_dependencies (id TEXT PRIMARY KEY, run_id TEXT NOT NULL REFERENCES runs(id), work_id TEXT NOT NULL REFERENCES work_items(id), depends_on_work_id TEXT NOT NULL REFERENCES work_items(id), created_at TEXT NOT NULL, UNIQUE(work_id, depends_on_work_id))`,
	`CREATE TABLE IF NOT EXISTS work_scopes (id TEXT PRIMARY KEY, work_id TEXT NOT NULL REFERENCES work_items(id), allowed_path TEXT, forbidden_path TEXT, created_at TEXT NOT NULL)`,
	`CREATE TABLE IF NOT EXISTS work_exit_criteria (id TEXT PRIMARY KEY, work_id TEXT NOT NULL REFERENCES work_items(id), criterion TEXT NOT NULL, verification_hint TEXT, required_evidence_kind TEXT CHECK(required_evidence_kind IS NULL OR required_evidence_kind IN ('file_anchor','git_diff','test_result','build_log','terminal_log','screenshot','approval','report','other')), created_at TEXT NOT NULL)`,
	`CREATE TABLE IF NOT EXISTS work_required_outputs (id TEXT PRIMARY KEY, work_id TEXT NOT NULL REFERENCES work_items(id), output_name TEXT NOT NULL, output_description TEXT, required INTEGER NOT NULL DEFAULT 1, created_at TEXT NOT NULL)`,
	`CREATE TABLE IF NOT EXISTS work_claims (id TEXT PRIMARY KEY, work_id TEXT NOT NULL REFERENCES work_items(id), agent_session_id TEXT NOT NULL REFERENCES agent_sessions(id), claimed_at TEXT NOT NULL, expires_at TEXT, released_at TEXT, heartbeat_at TEXT, active INTEGER NOT NULL DEFAULT 1)`,
	`CREATE TABLE IF NOT EXISTS agent_sessions (id TEXT PRIMARY KEY, run_id TEXT NOT NULL REFERENCES runs(id), role TEXT NOT NULL CHECK(role IN ('leader','reader','planner','executor','verifier','critic','summarizer')), status TEXT NOT NULL CHECK(status IN ('spawn_requested','starting','running','idle','stale','stopped','crashed','orphaned')), backend_kind TEXT, backend_model TEXT, backend_session_ref TEXT, current_work_id TEXT REFERENCES work_items(id), context_packet_id TEXT REFERENCES context_packets(id), permission_policy_id TEXT REFERENCES permission_policies(id), trace_id TEXT, span_id TEXT, spawned_at TEXT NOT NULL, heartbeat_at TEXT, stopped_at TEXT)`,
	`CREATE TABLE IF NOT EXISTS permission_policies (id TEXT PRIMARY KEY, name TEXT NOT NULL, role TEXT CHECK(role IS NULL OR role IN ('leader','reader','planner','executor','verifier','critic','summarizer')), description TEXT, created_at TEXT NOT NULL, updated_at TEXT NOT NULL)`,
	`CREATE TABLE IF NOT EXISTS permission_tools (id TEXT PRIMARY KEY, permission_policy_id TEXT NOT NULL REFERENCES permission_policies(id), tool_name TEXT NOT NULL, allowed INTEGER NOT NULL DEFAULT 1, created_at TEXT NOT NULL)`,
	`CREATE TABLE IF NOT EXISTS permission_paths (id TEXT PRIMARY KEY, permission_policy_id TEXT NOT NULL REFERENCES permission_policies(id), path_pattern TEXT NOT NULL, access TEXT NOT NULL CHECK(access IN ('read','write','patch','deny')), created_at TEXT NOT NULL)`,
	`CREATE TABLE IF NOT EXISTS approval_rules (id TEXT PRIMARY KEY, permission_policy_id TEXT NOT NULL REFERENCES permission_policies(id), action_pattern TEXT NOT NULL, reason TEXT, created_at TEXT NOT NULL)`,
	`CREATE TABLE IF NOT EXISTS context_packets (id TEXT PRIMARY KEY, run_id TEXT NOT NULL REFERENCES runs(id), work_id TEXT REFERENCES work_items(id), role TEXT CHECK(role IS NULL OR role IN ('leader','reader','planner','executor','verifier','critic','summarizer')), goal TEXT NOT NULL, instructions TEXT, stale_warnings TEXT, created_at TEXT NOT NULL, created_by TEXT)`,
	`CREATE TABLE IF NOT EXISTS context_packet_evidence (id TEXT PRIMARY KEY, context_packet_id TEXT NOT NULL REFERENCES context_packets(id), evidence_id TEXT NOT NULL REFERENCES evidence(id), reason TEXT, created_at TEXT NOT NULL, UNIQUE(context_packet_id, evidence_id))`,
	`CREATE TABLE IF NOT EXISTS context_packet_memory (id TEXT PRIMARY KEY, context_packet_id TEXT NOT NULL REFERENCES context_packets(id), memory_candidate_id TEXT REFERENCES memory_candidates(id), reason TEXT, created_at TEXT NOT NULL)`,
	`CREATE TABLE IF NOT EXISTS evidence (id TEXT PRIMARY KEY, run_id TEXT NOT NULL REFERENCES runs(id), work_id TEXT REFERENCES work_items(id), agent_session_id TEXT REFERENCES agent_sessions(id), kind TEXT NOT NULL CHECK(kind IN ('file_anchor','git_diff','test_result','build_log','terminal_log','screenshot','approval','report','other')), claim TEXT NOT NULL, source_kind TEXT, source_path TEXT, line_start INTEGER, line_end INTEGER, content_hash TEXT, command TEXT, exit_code INTEGER, artifact_path TEXT, git_repo_hash TEXT, git_base_commit TEXT, git_head_commit TEXT, git_tree_hash TEXT, git_blob_hash TEXT, observed_at TEXT NOT NULL, freshness TEXT)`,
	`CREATE TABLE IF NOT EXISTS evidence_stale_rules (id TEXT PRIMARY KEY, evidence_id TEXT NOT NULL REFERENCES evidence(id), rule TEXT NOT NULL, created_at TEXT NOT NULL)`,
	`CREATE TABLE IF NOT EXISTS tool_calls (id TEXT PRIMARY KEY, run_id TEXT NOT NULL REFERENCES runs(id), work_id TEXT REFERENCES work_items(id), agent_session_id TEXT REFERENCES agent_sessions(id), tool_name TEXT NOT NULL, status TEXT NOT NULL CHECK(status IN ('started','allowed','blocked','completed','failed')), input_summary TEXT, output_summary TEXT, blocked_reason TEXT, error_message TEXT, started_at TEXT NOT NULL, completed_at TEXT, trace_id TEXT, span_id TEXT, git_commit_before TEXT, git_commit_after TEXT)`,
	`CREATE TABLE IF NOT EXISTS verification_results (id TEXT PRIMARY KEY, run_id TEXT NOT NULL REFERENCES runs(id), work_id TEXT NOT NULL REFERENCES work_items(id), status TEXT NOT NULL CHECK(status IN ('pending','running','passed','failed','blocked','needs_review')), verification_policy TEXT, summary TEXT, tested_base_commit TEXT, tested_head_commit TEXT, created_at TEXT NOT NULL, created_by TEXT)`,
	`CREATE TABLE IF NOT EXISTS verification_evidence (id TEXT PRIMARY KEY, verification_id TEXT NOT NULL REFERENCES verification_results(id), evidence_id TEXT NOT NULL REFERENCES evidence(id), created_at TEXT NOT NULL, UNIQUE(verification_id, evidence_id))`,
	`CREATE TABLE IF NOT EXISTS failure_diagnoses (id TEXT PRIMARY KEY, run_id TEXT NOT NULL REFERENCES runs(id), work_id TEXT NOT NULL REFERENCES work_items(id), agent_session_id TEXT REFERENCES agent_sessions(id), verification_id TEXT REFERENCES verification_results(id), type TEXT NOT NULL CHECK(type IN ('insufficient_context','ambiguous_objective','missing_permission','scope_too_large','scope_too_small','bad_exit_criteria','wrong_role','tool_failure','model_failure','real_blocker','unknown')), reason TEXT NOT NULL, recommended_repackage TEXT, dem_trace_ref TEXT, created_at TEXT NOT NULL, created_by TEXT)`,
	`CREATE TABLE IF NOT EXISTS work_repackages (id TEXT PRIMARY KEY, run_id TEXT NOT NULL REFERENCES runs(id), old_work_id TEXT NOT NULL REFERENCES work_items(id), new_work_id TEXT NOT NULL REFERENCES work_items(id), diagnosis_id TEXT REFERENCES failure_diagnoses(id), reason TEXT, created_at TEXT NOT NULL)`,
	`CREATE TABLE IF NOT EXISTS events (id TEXT PRIMARY KEY, run_id TEXT NOT NULL REFERENCES runs(id), type TEXT NOT NULL CHECK(type IN ('run_created','run_status_changed','work_created','work_claimed','work_started','work_completed','work_verified','work_failed','work_blocked','work_repackaged','agent_spawned','agent_heartbeat','agent_stopped','agent_failed','context_packet_created','evidence_created','tool_call_started','tool_call_completed','tool_call_failed','tool_call_blocked','verification_started','verification_passed','verification_failed','approval_requested','approval_granted','approval_denied','report_created')), actor_type TEXT, actor_id TEXT, work_id TEXT REFERENCES work_items(id), agent_session_id TEXT REFERENCES agent_sessions(id), evidence_id TEXT REFERENCES evidence(id), tool_call_id TEXT REFERENCES tool_calls(id), verification_id TEXT REFERENCES verification_results(id), payload_json TEXT, trace_id TEXT, span_id TEXT, git_commit TEXT, git_tree_hash TEXT, created_at TEXT NOT NULL)`,
	`CREATE TABLE IF NOT EXISTS messages (id TEXT PRIMARY KEY, run_id TEXT NOT NULL REFERENCES runs(id), from_type TEXT NOT NULL, from_id TEXT, to_type TEXT NOT NULL, to_id TEXT, work_id TEXT REFERENCES work_items(id), message_type TEXT NOT NULL, body TEXT NOT NULL, created_at TEXT NOT NULL, read_at TEXT)`,
	`CREATE TABLE IF NOT EXISTS message_evidence (id TEXT PRIMARY KEY, message_id TEXT NOT NULL REFERENCES messages(id), evidence_id TEXT NOT NULL REFERENCES evidence(id), created_at TEXT NOT NULL, UNIQUE(message_id, evidence_id))`,
	`CREATE TABLE IF NOT EXISTS approval_requests (id TEXT PRIMARY KEY, run_id TEXT NOT NULL REFERENCES runs(id), work_id TEXT REFERENCES work_items(id), agent_session_id TEXT REFERENCES agent_sessions(id), action TEXT NOT NULL, target TEXT, reason TEXT, risk_level TEXT, status TEXT NOT NULL CHECK(status IN ('pending','granted','denied','cancelled')), requested_at TEXT NOT NULL, decided_at TEXT, decided_by TEXT, decision_reason TEXT)`,
	`CREATE TABLE IF NOT EXISTS memory_candidates (id TEXT PRIMARY KEY, run_id TEXT NOT NULL REFERENCES runs(id), claim TEXT NOT NULL, scope TEXT NOT NULL, status TEXT NOT NULL, created_from_work_id TEXT REFERENCES work_items(id), created_at TEXT NOT NULL, reviewed_at TEXT)`,
	`CREATE TABLE IF NOT EXISTS memory_candidate_evidence (id TEXT PRIMARY KEY, memory_candidate_id TEXT NOT NULL REFERENCES memory_candidates(id), evidence_id TEXT NOT NULL REFERENCES evidence(id), created_at TEXT NOT NULL, UNIQUE(memory_candidate_id, evidence_id))`,
	`CREATE TABLE IF NOT EXISTS reports (id TEXT PRIMARY KEY, run_id TEXT NOT NULL REFERENCES runs(id), kind TEXT NOT NULL, title TEXT NOT NULL, artifact_path TEXT, summary TEXT, created_at TEXT NOT NULL)`,
	`CREATE TABLE IF NOT EXISTS report_evidence (id TEXT PRIMARY KEY, report_id TEXT NOT NULL REFERENCES reports(id), evidence_id TEXT NOT NULL REFERENCES evidence(id), created_at TEXT NOT NULL, UNIQUE(report_id, evidence_id))`,
	`CREATE INDEX IF NOT EXISTS idx_events_run_created ON events(run_id, created_at)`,
	`CREATE INDEX IF NOT EXISTS idx_work_items_run_status ON work_items(run_id, status)`,
	`CREATE INDEX IF NOT EXISTS idx_agent_sessions_run_status ON agent_sessions(run_id, status)`,
	`CREATE INDEX IF NOT EXISTS idx_tool_calls_run_status ON tool_calls(run_id, status)`,
	`CREATE INDEX IF NOT EXISTS idx_evidence_run_work ON evidence(run_id, work_id)`,
	`CREATE INDEX IF NOT EXISTS idx_verification_results_run_work ON verification_results(run_id, work_id)`,
}

func knownTable(table string) bool {
	switch table {
	case "repos", "runs", "work_items", "work_dependencies", "work_scopes", "work_exit_criteria", "work_required_outputs", "work_claims", "agent_sessions", "permission_policies", "permission_tools", "permission_paths", "approval_rules", "context_packets", "context_packet_evidence", "context_packet_memory", "evidence", "evidence_stale_rules", "tool_calls", "verification_results", "verification_evidence", "failure_diagnoses", "work_repackages", "events", "messages", "message_evidence", "approval_requests", "memory_candidates", "memory_candidate_evidence", "reports", "report_evidence":
		return true
	default:
		return false
	}
}
