// OmG v1 Core DB Diagram
// Focus: Run / WorkItem / AgentSession / Evidence / Event / Verification
// Philosophy: Agent failure is usually a packaging failure before it is an intelligence failure.

Project omg_v1 {
  database_type: "SQLite/PostgreSQL"
  Note: '''
  OmG = Run-centered main AI development host.

  Core loop:
  User Request
    -> Run
    -> WorkItem
    -> Context Packet
    -> Agent Execution
    -> Evidence
    -> Verification
    -> Failure Diagnosis
    -> Repackaging

  v1 goal:
  - package work as WorkItems
  - assign WorkItems to role-scoped AgentSessions
  - provide ContextPackets
  - restrict tools/paths via PermissionPolicy
  - record ToolCalls and Events
  - collect Evidence
  - verify completion
  - leave enough trace for DeM failure diagnosis
  '''
}

Enum run_status {
  created
  scoped
  planned
  executing
  verifying
  reporting
  completed
  blocked
  failed
  cancelled
}

Enum work_status {
  draft
  ready
  claimed
  running
  completed
  verified
  blocked
  failed
  cancelled
  expired
}

Enum agent_status {
  spawn_requested
  starting
  running
  idle
  stale
  stopped
  crashed
  orphaned
}

Enum agent_role {
  leader
  reader
  planner
  executor
  verifier
  critic
  summarizer
}

Enum evidence_kind {
  file_anchor
  git_diff
  test_result
  build_log
  terminal_log
  screenshot
  approval
  report
  other
}

Enum event_type {
  run_created
  run_status_changed

  work_created
  work_claimed
  work_started
  work_completed
  work_verified
  work_failed
  work_blocked
  work_repackaged

  agent_spawned
  agent_heartbeat
  agent_stopped
  agent_failed

  context_packet_created
  evidence_created

  tool_call_started
  tool_call_completed
  tool_call_failed
  tool_call_blocked

  verification_started
  verification_passed
  verification_failed

  approval_requested
  approval_granted
  approval_denied

  report_created
}

Enum tool_call_status {
  started
  allowed
  blocked
  completed
  failed
}

Enum verification_status {
  pending
  running
  passed
  failed
  blocked
  needs_review
}

Enum failure_type {
  insufficient_context
  ambiguous_objective
  missing_permission
  scope_too_large
  scope_too_small
  bad_exit_criteria
  wrong_role
  tool_failure
  model_failure
  real_blocker
  unknown
}

Enum approval_status {
  pending
  granted
  denied
  cancelled
}

Table repos {
  id varchar [pk]
  root_path text [not null]
  repo_hash varchar [not null, unique]

  current_branch varchar
  current_commit varchar
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Note: '''
  Repo-local OmG scope.

  Git is source of truth for code state.
  OmG DB/Event Ledger is source of truth for agent/work semantics.
  '''
}

Table runs {
  id varchar [pk]
  repo_id varchar [not null, ref: > repos.id]

  objective text [not null]
  status run_status [not null]
  current_phase varchar

  base_commit varchar
  head_commit varchar
  trace_id varchar

  created_by varchar
  created_at timestamp [not null]
  updated_at timestamp [not null]
  completed_at timestamp

  Note: '''
  Run = one whole user-request-driven operation.

  Run Core should manage state/phase/transition,
  but should not directly read files, run tools, or write memory.
  '''
}

Table work_items {
  id varchar [pk]
  run_id varchar [not null, ref: > runs.id]

  parent_work_id varchar [ref: > work_items.id]
  role agent_role [not null]
  status work_status [not null]

  title text [not null]
  goal text [not null]

  context_packet_id varchar [ref: > context_packets.id]
  permission_policy_id varchar [ref: > permission_policies.id]

  priority int [default: 0]
  retry_count int [default: 0]

  base_commit varchar
  created_at timestamp [not null]
  updated_at timestamp [not null]
  completed_at timestamp

  Note: '''
  WorkItem = executable work contract.

  Not just a task.
  It must define goal, scope, allowed tools/paths,
  forbidden actions, required evidence, exit criteria,
  output contract, and failure report contract.

  Core invariant:
  No WorkItem without exit criteria.
  No Executor WorkItem without scope.
  No Agent assignment without Context Packet.
  No completion without Evidence.
  '''
}

Table work_dependencies {
  id varchar [pk]
  run_id varchar [not null, ref: > runs.id]

  work_id varchar [not null, ref: > work_items.id]
  depends_on_work_id varchar [not null, ref: > work_items.id]

  created_at timestamp [not null]

  indexes {
    (work_id, depends_on_work_id) [unique]
  }

  Note: '''
  Work Graph edge.

  v1 can keep this simple.
  Dependency means work_id should not run until depends_on_work_id reaches a required status.
  '''
}

Table work_scopes {
  id varchar [pk]
  work_id varchar [not null, ref: > work_items.id]

  allowed_path text
  forbidden_path text

  created_at timestamp [not null]

  Note: '''
  Path scope for a WorkItem.

  Executor should not modify outside allowed paths.
  Reader may have broader read-only scope.
  '''
}

Table work_exit_criteria {
  id varchar [pk]
  work_id varchar [not null, ref: > work_items.id]

  criterion text [not null]
  verification_hint text
  required_evidence_kind evidence_kind

  created_at timestamp [not null]

  Note: '''
  Exit criteria define what must be true before a WorkItem can be verified.

  completed != verified.
  '''
}

Table work_required_outputs {
  id varchar [pk]
  work_id varchar [not null, ref: > work_items.id]

  output_name varchar [not null]
  output_description text
  required bool [not null, default: true]

  created_at timestamp [not null]
}

Table work_claims {
  id varchar [pk]
  work_id varchar [not null, ref: > work_items.id]
  agent_session_id varchar [not null, ref: > agent_sessions.id]

  claimed_at timestamp [not null]
  expires_at timestamp
  released_at timestamp
  heartbeat_at timestamp

  active bool [not null, default: true]

  Note: '''
  Claim / Lease.

  Prevents duplicate work and detects stale/orphaned agents.
  '''
}

Table agent_sessions {
  id varchar [pk]
  run_id varchar [not null, ref: > runs.id]

  role agent_role [not null]
  status agent_status [not null]

  backend_kind varchar
  backend_model varchar
  backend_session_ref text

  current_work_id varchar [ref: > work_items.id]
  context_packet_id varchar [ref: > context_packets.id]
  permission_policy_id varchar [ref: > permission_policies.id]

  trace_id varchar
  span_id varchar

  spawned_at timestamp [not null]
  heartbeat_at timestamp
  stopped_at timestamp

  Note: '''
  AgentSession = role + backend/model + permission policy + context packet + current WorkItem.

  Agent is not a persona.
  Agent is an execution slot.
  '''
}

Table permission_policies {
  id varchar [pk]
  name varchar [not null]
  role agent_role

  description text

  created_at timestamp [not null]
  updated_at timestamp [not null]

  Note: '''
  Permission Policy restricts tools, paths, and approval-required actions.

  Role should be enforced by permission, not only by prompt.
  '''
}

Table permission_tools {
  id varchar [pk]
  permission_policy_id varchar [not null, ref: > permission_policies.id]

  tool_name varchar [not null]
  allowed bool [not null, default: true]

  created_at timestamp [not null]
}

Table permission_paths {
  id varchar [pk]
  permission_policy_id varchar [not null, ref: > permission_policies.id]

  path_pattern text [not null]
  access varchar [not null] // read | write | patch | deny

  created_at timestamp [not null]
}

Table approval_rules {
  id varchar [pk]
  permission_policy_id varchar [not null, ref: > permission_policies.id]

  action_pattern varchar [not null]
  reason text
  created_at timestamp [not null]

  Note: '''
  Actions matching this rule require explicit ApprovalRequest.
  Examples:
  git.push, file.delete, modify.env, production_write, credential_access.
  '''
}

Table context_packets {
  id varchar [pk]
  run_id varchar [not null, ref: > runs.id]
  work_id varchar [ref: > work_items.id]

  role agent_role
  goal text [not null]

  instructions text
  stale_warnings text

  created_at timestamp [not null]
  created_by varchar

  Note: '''
  Context Packet = evidence-backed context selected for a specific WorkItem.

  Context Engine is not a summarizer.
  Evidence Store is the warehouse.
  Context Engine is the packager.
  '''
}

Table context_packet_evidence {
  id varchar [pk]
  context_packet_id varchar [not null, ref: > context_packets.id]
  evidence_id varchar [not null, ref: > evidence.id]

  reason text
  created_at timestamp [not null]

  indexes {
    (context_packet_id, evidence_id) [unique]
  }
}

Table context_packet_memory {
  id varchar [pk]
  context_packet_id varchar [not null, ref: > context_packets.id]
  memory_candidate_id varchar [ref: > memory_candidates.id]

  reason text
  created_at timestamp [not null]
}

Table evidence {
  id varchar [pk]
  run_id varchar [not null, ref: > runs.id]
  work_id varchar [ref: > work_items.id]
  agent_session_id varchar [ref: > agent_sessions.id]

  kind evidence_kind [not null]
  claim text [not null]

  source_kind varchar
  source_path text
  line_start int
  line_end int
  content_hash varchar

  command text
  exit_code int
  artifact_path text

  git_repo_hash varchar
  git_base_commit varchar
  git_head_commit varchar
  git_tree_hash varchar
  git_blob_hash varchar

  observed_at timestamp [not null]
  freshness varchar

  Note: '''
  Evidence = verifiable trace for a claim.

  Evidence can be file anchor, diff, test result, log, screenshot, approval, etc.

  No trusted memory or final decision without Evidence.
  '''
}

Table evidence_stale_rules {
  id varchar [pk]
  evidence_id varchar [not null, ref: > evidence.id]

  rule text [not null]
  created_at timestamp [not null]

  Note: '''
  Stale rule example:
  - src/auth.ts changes
  - base commit moves after abc123
  - tests/auth.test.ts changes
  '''
}

Table tool_calls {
  id varchar [pk]
  run_id varchar [not null, ref: > runs.id]
  work_id varchar [ref: > work_items.id]
  agent_session_id varchar [ref: > agent_sessions.id]

  tool_name varchar [not null]
  status tool_call_status [not null]

  input_summary text
  output_summary text

  blocked_reason text
  error_message text

  started_at timestamp [not null]
  completed_at timestamp

  trace_id varchar
  span_id varchar

  git_commit_before varchar
  git_commit_after varchar

  Note: '''
  ToolCall record.

  Tool calls should be auditable.
  Tool Bridge may include shell/file/git/MCP/browser/backend adapters.
  '''
}

Table verification_results {
  id varchar [pk]
  run_id varchar [not null, ref: > runs.id]
  work_id varchar [not null, ref: > work_items.id]

  status verification_status [not null]

  verification_policy varchar
  summary text

  tested_base_commit varchar
  tested_head_commit varchar

  created_at timestamp [not null]
  created_by varchar

  Note: '''
  VerificationResult = WorkItem.exit_criteria + VerificationPolicy + Evidence => pass/fail.

  Executor completed != Run completed.
  '''
}

Table verification_evidence {
  id varchar [pk]
  verification_id varchar [not null, ref: > verification_results.id]
  evidence_id varchar [not null, ref: > evidence.id]

  created_at timestamp [not null]

  indexes {
    (verification_id, evidence_id) [unique]
  }
}

Table failure_diagnoses {
  id varchar [pk]
  run_id varchar [not null, ref: > runs.id]
  work_id varchar [not null, ref: > work_items.id]
  agent_session_id varchar [ref: > agent_sessions.id]
  verification_id varchar [ref: > verification_results.id]

  type failure_type [not null]
  reason text [not null]

  recommended_repackage text
  dem_trace_ref text

  created_at timestamp [not null]
  created_by varchar

  Note: '''
  Failure Diagnosis boundary.

  DeM should own diagnosis:
  - trace/DAG analysis
  - WorkItem packaging problem detection
  - recommended repackage
  - next WorkItems proposal

  OmG records diagnosis and acts on it.
  '''
}

Table work_repackages {
  id varchar [pk]
  run_id varchar [not null, ref: > runs.id]

  old_work_id varchar [not null, ref: > work_items.id]
  new_work_id varchar [not null, ref: > work_items.id]
  diagnosis_id varchar [ref: > failure_diagnoses.id]

  reason text
  created_at timestamp [not null]

  Note: '''
  Records the repackage loop.

  Failed WorkItem -> diagnosis -> revised/split WorkItem.
  '''
}

Table events {
  id varchar [pk]
  run_id varchar [not null, ref: > runs.id]

  type event_type [not null]
  actor_type varchar // user | run_core | agent | tool | dem | verifier
  actor_id varchar

  work_id varchar [ref: > work_items.id]
  agent_session_id varchar [ref: > agent_sessions.id]
  evidence_id varchar [ref: > evidence.id]
  tool_call_id varchar [ref: > tool_calls.id]
  verification_id varchar [ref: > verification_results.id]

  payload_json text

  trace_id varchar
  span_id varchar

  git_commit varchar
  git_tree_hash varchar

  created_at timestamp [not null]

  Note: '''
  Event Ledger table / index.

  Event Ledger = semantic source of truth.
  Control Board = projection.

  In v1 this may mirror ledger.jsonl for queryability.
  '''
}

Table messages {
  id varchar [pk]
  run_id varchar [not null, ref: > runs.id]

  from_type varchar [not null] // user | run_core | agent | verifier | dem
  from_id varchar
  to_type varchar [not null] // run_core | agent | user | dem
  to_id varchar

  work_id varchar [ref: > work_items.id]

  message_type varchar [not null] // instruction | report | blocker | question | review_comment | result
  body text [not null]

  created_at timestamp [not null]
  read_at timestamp

  Note: '''
  Mailbox.

  Agent-to-agent communication should be structured and auditable.
  MCP is not agent-to-agent communication.
  '''
}

Table message_evidence {
  id varchar [pk]
  message_id varchar [not null, ref: > messages.id]
  evidence_id varchar [not null, ref: > evidence.id]

  created_at timestamp [not null]

  indexes {
    (message_id, evidence_id) [unique]
  }
}

Table approval_requests {
  id varchar [pk]
  run_id varchar [not null, ref: > runs.id]
  work_id varchar [ref: > work_items.id]
  agent_session_id varchar [ref: > agent_sessions.id]

  action varchar [not null]
  target text
  reason text
  risk_level varchar

  status approval_status [not null]

  requested_at timestamp [not null]
  decided_at timestamp
  decided_by varchar

  decision_reason text

  Note: '''
  Approval Request should be explicit and logged.

  Dangerous actions must not be hidden inside prompts.
  '''
}

Table memory_candidates {
  id varchar [pk]
  run_id varchar [not null, ref: > runs.id]

  claim text [not null]
  scope varchar [not null] // project | repo | run | file
  status varchar [not null] // candidate | accepted | rejected | stale

  created_from_work_id varchar [ref: > work_items.id]
  created_at timestamp [not null]
  reviewed_at timestamp

  Note: '''
  Memory Steward v1 should produce candidates, not auto-promote.

  Memory must be evidence-backed.
  '''
}

Table memory_candidate_evidence {
  id varchar [pk]
  memory_candidate_id varchar [not null, ref: > memory_candidates.id]
  evidence_id varchar [not null, ref: > evidence.id]

  created_at timestamp [not null]

  indexes {
    (memory_candidate_id, evidence_id) [unique]
  }
}

Table reports {
  id varchar [pk]
  run_id varchar [not null, ref: > runs.id]

  kind varchar [not null] // final | interim | risk | next_action
  title text [not null]
  artifact_path text
  summary text

  created_at timestamp [not null]

  Note: '''
  Report Surface.

  Report is not just summary.
  Report is evidence-backed decision surface:
  Result, Changed, Evidence, Verification, Risks, Next.
  '''
}

Table report_evidence {
  id varchar [pk]
  report_id varchar [not null, ref: > reports.id]
  evidence_id varchar [not null, ref: > evidence.id]

  created_at timestamp [not null]

  indexes {
    (report_id, evidence_id) [unique]
  }
}
